# countess-batch

./: README.md  TODO.md  pyproject.toml
src/: countess_batch.py
src/countess_batch/: __init__.py
src/countess_batch/templates/: test.ini
src/countess_batch_templates/: vampseq.ini
